Release 0.18.0 ready (#466)
#449 #463 done

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: vaadin-miki <vaadin-miki@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Jean-Christophe Gueriaud <51313578+jcgueriaud1@users.noreply.github.com>
Co-authored-by: Jean-Christophe Gueriaud <jean-christophe@vaadin.com>